# Analysis-of-Focal-Methods-using-Intermediary-LLVM

./: .gitignore  README.md  compileC++.py  config.yml  instructions.md  main.py  test.py
documentation/: bibliography.bib  paper.aux  paper.bbl  paper.blg  paper.listing  paper.out  paper.run.xml  paper.tex
documentation/_minted-presentation/: A076AC68553712297ADB5A2602BDBEF55DA9344F1AC2B0E6972CFB9026C3D6AF.pygtex
example-cpp/: CMakeLists.txt
example-cpp/source/: add.cpp  add.h  add.h.gch  main.cpp
example-cpp/test/: CMakeLists.txt  CmakeLists.txt.in  test.cpp
exampleProjects/add/: CMakeLists.txt
exampleProjects/add/test/: test.cpp
exampleProjects/dict/: CMakeLists.txt
exampleProjects/dict/source/: Dict.cpp  Dict.h  main.cpp
exampleProjects/dict/test/: test.cpp
exampleProjects/operations/: CMakeLists.txt
exampleProjects/operations/source/: operations.cpp  operations.h
exampleProjects/operations/test/: test.cpp
exampleProjects/profile/: CMakeLists.txt
exampleProjects/profile/source/: Profile.cpp  Profile.h
exampleProjects/profile/test/: test.cpp
exampleProjects/simple_class/: CMakeLists.txt  Profile.ll
exampleProjects/simple_class/source/: Profile.h  main.cpp
exampleProjects/simple_class/test/: test.cpp
exampleProjects/stack/: CMakeLists.txt
exampleProjects/stack/source/: Stack.cpp  Stack.h
exampleProjects/stack/test/: test.cpp
exampleProjects/test/: test.c
graph/: edge.py  graph.py  node.py
llvmAnalyser/: Attributes.py  alias.py  analyser.py  analyzeTestMethod.py  attributes.py  br.py  call.py  focalMethodAnalyzer.py  function.py  gtest.py  insertvalue.py  invoke.py  llvmChecker.py  llvmStatement.py  llvmchecker.py  load.py  memory.py  mutationChecker.py  store.py  types.py  values.py
llvmAnalyser/aggregate/: extractvalue.py  insertvalue.py
llvmAnalyser/binary/: binaryOp.py  fpBinaryOp.py
llvmAnalyser/bitwiseBinary/: bitwiseBinary.py  xor.py
llvmAnalyser/conversion/: bitcast.py  conversion.py  fpext.py  sitofp.py  trunc.py
llvmAnalyser/memoryAccess/: alloca.py  atomicrmw.py  cmpxchg.py  getelementptr.py  load.py  store.py
llvmAnalyser/other/: call.py  cmp.py  fcmp.py  freeze.py  icmp.py  phi.py  select.py
llvmAnalyser/terminator/: br.py  callbr.py  indirectbr.py  invoke.py  resume.py  ret.py  switch.py
llvmAnalyser/testingFramework/: gtest.py  testingFramework.py
llvmAnalyser/unary/: fneg.py
llvmAnalyser/vector/: extractelement.py  insertelement.py  shufflevector.py
test/: llvm_call_test.py  llvm_decl_test.py  llvm_def_test.py  llvm_invoke_test.py  llvm_types_test.py  llvm_values_test.py  test.py
testing_frameworks/gtest/: gtest-all.ll  gtest_main-ir.ll  gtest_main.ll
